implementing baneer, pay per view and resolving CORS problem
